logs/timmy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/timmy'...
Listing './lib/python3.5/site-packages/timmy/analyze_modules'...
Compiling './lib/python3.5/site-packages/timmy/flock.py'...
***   File "./lib/python3.5/site-packages/timmy/flock.py", line 79
    except (OSError, IOError), e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/timmy/modules'...
Listing './lib/python3.5/site-packages/timmy-1.26.13.egg-info'...
Listing './lib/python3.5/site-packages/timmy_data'...
Listing './lib/python3.5/site-packages/timmy_data/config'...
Listing './lib/python3.5/site-packages/timmy_data/rq'...
Listing './lib/python3.5/site-packages/timmy_data/rq/filelists'...
Listing './lib/python3.5/site-packages/timmy_data/rq/scripts'...
Listing './lib/python3.5/site-packages/timmy_data/simplified-performance-testing'...
Listing './lib/python3.5/site-packages/timmy_data/simplified-performance-testing/scripts'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
